JDK 17 Upgrade (#568)
Bumps to JDK 17